<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@android:color/black"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView_sure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:fontFamily="@font/nosifer"
                    android:gravity="center"
                    android:text="@string/r_u_sure" />
                <TextView
                    android:id="@+id/textView_warn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:fontFamily="@font/creepster"
                    android:gravity="center"
                    android:text="@string/all_ur_data" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_cancel_popUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:fontFamily="@font/nosifer"
                            android:text="@string/text_cancel"
                            android:layout_marginStart="30dp"/>

                        <Button
                            android:id="@+id/button_ok_popUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="40dp"
                            android:fontFamily="@font/nosifer"
                            android:text="@string/text_ok" />

                    </FrameLayout>

                </LinearLayout>




            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>


</LinearLayout>